Fixes the alignment :)

--- a/styles/main.css
+++ b/styles/main.css
@@ -50,42 +50,33 @@ body {
 	width: 100%;
 }
 
+.search-form {
+	padding: 0px;
+}
+
 .search-form input {
+	border: 1px solid #DDDDDD;
 	display: inline-block;
+	padding: 0px;
+	height: 40px;
 }
 
-.search-form .search-button {
-
+.search-form input[type="text"] {
+	border-radius: 3px;
+	font-family: "Roboto", sans-serif;
+	font-size: 17px;
+	font-weight: 500;
+	margin-top: 20px;
+	width: 400px;
 }
 
-.search-form .search-text {
-
+.search-form input[type="image"] {
+	border: 1px solid #DDDDDD;
+	background-color: white;
+	border-radius: 3px;
+	margin-bottom: -14px;
 }
 
-/*
-.search-form input {
-  font-family: "Roboto", sans-serif;
-  font-size: 17px;
-  font-weight: 500;
-  line-height: 30px;
-  height: 30px;
-  border: 1px solid #DDDDDD;
-  border-radius: 3px;
-  padding: 0 8px;
-  width: 400px;
-}
-
-
-/*.search-form .search-button {
-  font-size: 17px;
-  padding: 2px 6px 3px 6px;
-  background-color: white;
-  border: 1px solid #DDDDDD;
-  border-radius: 3px;
-	width: 37px;
-	height:30px;
-}
-*/
 .results {
 	margin-top: 25px;
 }
